# dreamjob

./: .gitignore  README.md  environment.yml  pyproject.toml
models/tf_idf/: tf_idf_model.p
notebooks/db/: celery_task_check.ipynb  collect_data.ipynb  create_db.ipynb  data_manipulation.ipynb  preprocess_data.ipynb
notebooks/logging/: test_logs.ipynb
src/dreamjob/api/: main.py
src/dreamjob/backend/: logger.py
src/dreamjob/backend/api/: main.py
src/dreamjob/backend/config/: __init__.py  config.py
src/dreamjob/backend/db/: api.py  collect_data_hh.py  create_db.py  data_manipulation.py  db_engine.py  tasks.py
src/dreamjob/backend/db/utils/: create_db.py  data_manipulation.py  preprocess_data.py
src/dreamjob/commons/: data_models.py  exceptions.py
src/dreamjob/config/: config.py  logging_setup.py  settings.toml
src/dreamjob/db/: api.py  collect_data_hh.py  create_db.py  data_manipulation.py  prepare_data.py  preprocess_data.py  tasks.py
src/dreamjob/db/utils/: collect_data.py  create_db.py  data_manipulation.py  engine.py
src/dreamjob/frontend/: 🏡_Главная_страница.py
src/dreamjob/frontend/pages/: 1_🎨_Поиск_работы.py
src/dreamjob/ml/: recommend.py
src/dreamjob/ml/data/: preprocess_text.py
src/dreamjob/ml/models/: base.py  tf_idf.py
streamlit/: 🏡_Главная_страница.py
streamlit/pages/: 1_🎨_Поиск_работы.py  2_🌎_Карта.py
tests/: test_dreamjob.py
