[tool.poetry]
name = "dreamjob"
version = "0.1.0"
description = ""
authors = ["Sarvar-Anvarov"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
requests = "^2.27.1"
pandas = "^1.4.2"
dynaconf = "^3.1.8"
SQLAlchemy = "^1.4.36"
psycopg2 = "^2.9.3"
structlog = "^21.5.0"
rich = {version = "^12.4.4", optional = true}
colorama = {version = "^0.4.4", optional = true}
celery = "^5.2.7"
redis = "^4.3.3"
sklearn = "^0.0"
httpie = "^3.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.poetry.scripts]
api = "dreamjob.api.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
